Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.11.0, 5.12, 6.8
-
macOS with VoiceOver
-
-
60871fc0c (dev), f67b8f68a (6.8), b17a8a9b2 (dev), e875b3863 (6.7), b792b4037 (6.8), 532da1626 (6.7), 3f2889b3e (tqtc/lts-6.5), 2fea38406 (tqtc/lts-6.5)
Description
When using VoiceOver on macos the user cannot access menu items. The expected key combination is VO-Shift-DownArrow, but that interacts with the Button, which is used to open the menu. Also trying to navigate the menu with VO-arrows focuses the whole menu popup - not single item. (By default VO key is Ctrl-Option.)
The attached example can be used to reproduce the problem. Press VO-space to open the menu and then try to access it with above mentioned ways.
Attachments
Issue Links
- is duplicated by
-
QTBUG-105613 Unable to access contextual menu on MacOS using VoiceOver
-
- Closed
-
- mentioned in
-
Page Loading...