src/plugins/platforms/cocoa/qcocoaaccessibility.mm
@@ -40,6 +40,9 @@ void QCocoaAccessibility::notifyAccessibilityUpdate(QAccessibleEvent *event)
         NSAccessibilityPostNotification(element, NSAccessibilityFocusedUIElementChangedNotification);
         break;
     }
+    case QAccessible::PopupMenuStart:
+        NSAccessibilityPostNotification(element, NSAccessibilityFocusedUIElementChangedNotification);
+        break;
     case QAccessible::StateChanged:
     case QAccessible::ValueChanged:
     case QAccessible::TextInserted:
@@ -204,7 +207,8 @@ bool shouldBeIgnored(QAccessibleInterface *interface)
         role == QAccessible::Application || // We use the system-provided application element.
         role == QAccessible::ToolBar ||     // Access the tool buttons directly.
         role == QAccessible::Pane ||        // Scroll areas.
-        role == QAccessible::Client)        // The default for QWidget.
+        role == QAccessible::Client ||      // The default for QWidget.
+        role == QAccessible::PopupMenu)     // Access the menu items directly
         return true;
 
     NSString *mac_role = macRole(interface);
@@ -235,7 +239,6 @@ bool shouldBeIgnored(QAccessibleInterface *interface)
 NSArray<QMacAccessibilityElement *> *unignoredChildren(QAccessibleInterface *interface)
 {
     int numKids = interface->childCount();
-    // qDebug() << "Children for: " << axid << iface << " are: " << numKids;
 
     NSMutableArray<QMacAccessibilityElement *> *kids = [NSMutableArray<QMacAccessibilityElement *> arrayWithCapacity:numKids];
     for (int i = 0; i < numKids; ++i) {
@@ -244,7 +247,6 @@ NSArray<QMacAccessibilityElement *> *unignoredChildren(QAccessibleInterface *int
             continue;
 
         QAccessible::Id childId = QAccessible::uniqueId(child);
-        //qDebug() << "    kid: " << childId << child;
 
         QMacAccessibilityElement *element = [QMacAccessibilityElement elementWithId: childId];
         if (element)
